fixed white space, added text

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     margin: 0;
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
@@ -32,7 +32,6 @@ body {
 
 .section {
     padding: 50px;
-    background-color: ed;
     margin-left: -15px;
     margin-right: -15px;
     height: 100vh;
@@ -60,15 +59,21 @@ body {
     background-image: url(../img/bg_onions.jpg);
 }
 
+.benefits {
+    margin: 0 50px 0 50px;
+}
+
 .section4 {
     background-color: #ddd;
     padding: 0;
+    overflow: hidden;
 }
 
 .category {
     height: 50vh;
     border: 1px solid #fff;
     overflow: hidden;
+    padding: 0;
 }
 
 .category h2 {
@@ -81,7 +86,7 @@ body {
 /* For xs sized screens */
 @media (max-width: 768px) {
     .section4 {
-        height: 200vh;
+        height: 150vh;
     }
     .category {
         height: 25vh;
@@ -159,5 +164,19 @@ footer .icon i:nth-child(2) {
 }
 
 footer .icon:hover {
+    opacity: 0.7;
+}
+
+footer .arrow-to-top {
+    position: fixed;
+    bottom: 90px;
+    right: 45px;
+}
+
+footer .arrow-to-top i {
+    color: #b2b2b2;
+}
+
+footer .arrow-to-top i:hover {
     opacity: 0.7;
 }
